WebCore:

Reviewed and tweaked by Darin.

        DOMRange.surroundContents throws wrong exception (Acid3 bug)
        http://bugs.webkit.org/show_bug.cgi?id=16749

        Throw BAD_BOUNDARYPOINTS_ERR if attempting to split a non-text node that
        has offsets in characters.

        * dom/Range.cpp:
        (WebCore::Range::surroundContents):

LayoutTests:

        Reviewed and tweaked a bit by Darin.

        DOMRange.surroundContents throws wrong exception (Acid3 bug)
        http://bugs.webkit.org/show_bug.cgi?id=16749

        Throw BAD_BOUNDARYPOINTS_ERR if attempting to split a non-text node that
        has offsets in characters

        * fast/dom/Range/range-exceptions-expected.txt: Added.
        * fast/dom/Range/resources/range-exceptions.js: Added.



Canonical link: https://commits.webkit.org/23934@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30123 268f45cc-cd09-0410-ab3c-d52691b4dbfc