WebCore/dom/Range.h
@@ -131,6 +131,8 @@ private:
     void checkNodeBA(Node*, ExceptionCode&) const;
     void checkDeleteExtract(ExceptionCode&);
     bool containedByReadOnly() const;
+    unsigned maxStartOffset() const;
+    unsigned maxEndOffset() const;
 };
 
 PassRefPtr<Range> rangeOfContents(Node*);
